--- a/Day 2.ipynb
+++ b/Day 2.ipynb
@@ -21,7 +21,7 @@
    "metadata": {},
    "source": [
     "Pattern 1:\n",
-    "![title](img/8.jpg) "
+    "![title](8.jpg) "
    ]
   },
   {
@@ -36,7 +36,7 @@
    "metadata": {},
    "source": [
     "Pattern 2:\n",
-    "![title](img/3.jpg)"
+    "![title](3.jpg)"
    ]
   },
   {
