--- a/Day_20.ipynb
+++ b/Day_20.ipynb
@@ -97,6 +97,80 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "4.Write a program that prompts the user to enter the distance to drive, the fuel efficiency of the car in miles per gallon, and the price per gallon, and displays the cost of the trip.\n",
+    "\n",
+    "Sample Input :\n",
+    "Enter the driving distance: 500\n",
+    "Enter miles per gallon: 10\n",
+    "Enter price per gallon: 120\n",
+    "\n",
+    "Sample output :\n",
+    "The cost of driving is Rs6000.00"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "5.Create a class to print the area of a square and a rectangle. The class has two methods with the same name but different \n",
+    "number of parameters. The method for printing area of rectangle has two parameters which are length and breadth respectively \n",
+    "while the other method for printing area of square has one parameter which is side of square.\n",
+    "\n",
+    "Sample input :\n",
+    "To calculate Area of Square\n",
+    "Enter the value of side: 3\n",
+    "\n",
+    "To calculate Area of Rectangle\n",
+    "Enter the value of length: 4\n",
+    "Enter the value of breadth: 6\n",
+    "\n",
+    "Sample output:\n",
+    "Area of Square =9\n",
+    "Area of Rectangle =24"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "6.Write two overloaded methods that return the average of an array with the following headers:\n",
+    "    public static int average(int[] array)\n",
+    "    public static double average(double[] array)\n",
+    "The program should prompt the user to enter N double/int values, invokes corresponding method, and displays the average value.\n",
+    "\n",
+    "Sample input  1:\n",
+    "How many elements : 4\n",
+    "Please enter 4 values: 6.7 2.4 8.9 2.3\n",
+    "\n",
+    "Sample output :\n",
+    "The average is: 5.08"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
