--- a/Day_29.ipynb
+++ b/Day_29.ipynb
@@ -36,7 +36,7 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "2. Write a program to create a class named Shape. In this class we have three sub classes Circle, Triangle and Square. Each class has two methods named draw() and erase(). Create these using polymorphism concepts."
+    "2. Write a program to create a class named Shape. Circle, Triangle and Square are the three sub classes of class Shape. Each class has two methods named draw() and erase(). Create these using polymorphism concepts."
    ]
   },
   {
