--- a/Day_47.ipynb
+++ b/Day_47.ipynb
@@ -4,25 +4,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Important Instructions:"
+    "# Important Instructions"
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1)When coding in java using jupyter notebooks there is no need to provide a main method as it is automatically provided.\n",
-    "\n",
-    "2)Code written within a cell is automatically placed within the main method unless you explicitly place it within another class\n",
-    "\n",
-    "I hope you enjoyed the classes and have built a good foundation for the logic involved. Now lets solve a few intresting questions to see what kind of logic you can come up with :)"
+    "###### I hope you enjoyed Python classes and have built a good foundation for the logic involved. Now lets solve a few intresting questions to see what kind of logic you can come up with :)"
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1.Write a program illustrate need of Synchronization in Threads"
+    "###### Create a simple decorator function which decorates the inner class as shown below,\n",
+    "<b>Condition: If the input is school, then decorate by flowers\n",
+    "    \n",
+    "If the input is other than school, then decorate by lights.</b>\n",
+    "\n",
+    "Sample Input:\n",
+    "\n",
+    "School\n",
+    "\n",
+    "Building\n",
+    "\n",
+    "Sample Output:\n",
+    "\n",
+    "School: Decorate with Flowers\n",
+    "\n",
+    "Building: Decorate with Lights\n",
+    "\n",
+    "Office Decorate with Lights\n"
    ]
   },
   {
@@ -33,25 +46,43 @@
    "source": []
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2.Write a program to show how synchronized methods and objects monitors are used to coordinate access to a common object by multiple threads to print a message “Small steps every day”\n",
-    "Hint1: Create String array to store the string “Small steps every day”.\n",
-    "Hint 2: Same program as Program 7 in Day 11 Coding assignment, but you have to use synchronized methods\n",
+    "###### Create a simple decorator function to reverse a given string as shown below,\n",
     "\n",
-    "Sample output:\n",
+    "Sample Input: Enter a string: Hello World\n",
     "\n",
-    "thread1: Small\n",
-    "thread1: steps\n",
-    "thread1: every\n",
-    "thread1: day\n",
-    "Thread 1 is dead.\n",
-    "thread2: Small\n",
-    "thread2: steps\n",
-    "thread2: every\n",
-    "thread2: day\n",
-    "Thread 2 is dead.\n"
+    "Sample Output: dlroW olleH\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### Create a Decorator function which calculates the square and factorial of given input based on the function call.\n",
+    "\n",
+    "Sample Input: Enter a number:5\n",
+    "\n",
+    "<B>If the function call has made as below.\n",
+    "\n",
+    "decor(5,’Square’)\n",
+    "\n",
+    "decor(5,’Factorial’)</B>\n",
+    "\n",
+    "Sample Output:\n",
+    "\n",
+    "Inside Inner Function!! Square 25\n",
+    "\n",
+    "Inside decorator Function!! Factorial 120\n",
+    "    \n"
    ]
   },
   {
@@ -64,17 +95,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Java",
-   "language": "java",
-   "name": "java"
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": "java",
-   "file_extension": ".jshell",
-   "mimetype": "text/x-java-source",
-   "name": "Java",
-   "pygments_lexer": "java",
-   "version": "11.0.7+10-post-Ubuntu-2ubuntu218.04"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
